# KE

./: .env.example  .gitignore  DEPLOY_TEST_REPORT.md  README.md  deploy_full.py  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_seed_admin.py  002_ontology_tables.py  003_rag_qa_tables.py  004_extraction_tables.py  005_conflict_snapshot_tables.py  006_finetune_tables.py  007_system_config.py
backend/app/: config.py  main.py
backend/app/core/: auth.py  exceptions.py  llm_client.py  logging_config.py  runtime_config.py  security.py
backend/app/db/: milvus.py  minio.py  neo4j.py  postgresql.py  rabbitmq.py  redis.py
backend/app/middleware/: auth.py  rate_limit.py  request_log.py  security_headers.py
backend/app/models/: models.py
backend/app/schemas/: auth.py  common.py  ingestion.py
backend/app/services/admin/: config_router.py  router.py
backend/app/services/agent/: agent_service.py  router.py
backend/app/services/auth/: router.py
backend/app/services/extraction/: document_parser.py  extraction_service.py  router.py
backend/app/services/finetune/: router.py
backend/app/services/governance/: conflict_service.py  (+1 more)
backend/tests/: test_admin_model_registry.py  test_agent_service.py  test_config_validation.py  test_conflict_service.py  test_document_parser.py  test_extraction_service.py  test_graph_service.py  test_health.py  test_ingestion_upload.py  test_rag_access_filter.py  test_rag_service.py  test_security_context.py
(+54 files in other folders)
